--- a/SLNWEB.Core/SLNWEB.Core.csproj
+++ b/SLNWEB.Core/SLNWEB.Core.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D063C9B-E76F-4831-97D3-B1E01D2A7B8D}</ProjectGuid>
+    <ProjectGuid>{06D48A3B-2730-44EE-B2D4-BD9F717590AC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SLNWEB.Core</RootNamespace>
@@ -50,27 +50,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Categories.cs" />
-    <Compile Include="Entities\CustomerDemographics.cs" />
-    <Compile Include="Entities\Customers.cs" />
-    <Compile Include="Entities\Employees.cs" />
+    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\Customer.cs" />
+    <Compile Include="Entities\CustomerDemographic.cs" />
+    <Compile Include="Entities\Employee.cs" />
     <Compile Include="Context\NorthwindEntities.cs" />
-    <Compile Include="Entities\Orders.cs" />
-    <Compile Include="Entities\Order_Details.cs" />
-    <Compile Include="Entities\Products.cs" />
+    <Compile Include="Entities\Order.cs" />
+    <Compile Include="Entities\Order_Detail.cs" />
+    <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Region.cs" />
-    <Compile Include="Entities\Shippers.cs" />
-    <Compile Include="Entities\Suppliers.cs" />
-    <Compile Include="Entities\sysdiagrams.cs" />
-    <Compile Include="Entities\Territories.cs" />
+    <Compile Include="Entities\Shipper.cs" />
+    <Compile Include="Entities\Supplier.cs" />
+    <Compile Include="Entities\sysdiagram.cs" />
+    <Compile Include="Entities\Territory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
