--- a/SLNWEB.DAO/SLNWEB.DAO.csproj
+++ b/SLNWEB.DAO/SLNWEB.DAO.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,9 +43,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VM\CategoryVM.cs" />
+    <Compile Include="VM\EmployeeVM.cs" />
+    <Compile Include="VM\ProductVM.cs" />
+    <Compile Include="VM\SatisVM.cs" />
+    <Compile Include="VM\SatisYapVM.cs" />
+    <Compile Include="VM\ShipperVM.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="VM\" />
+    <ProjectReference Include="..\SLNWEB.Core\SLNWEB.Core.csproj">
+      <Project>{06D48A3B-2730-44EE-B2D4-BD9F717590AC}</Project>
+      <Name>SLNWEB.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
