--- a/SLNWEB.Core/App.Config
+++ b/SLNWEB.Core/App.Config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NorthwindEntities" connectionString="data source=DESKTOP-47MR3VQ;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NorthwindEntities" connectionString="data source=.;database=Northwind;uid=buraktoglu;pwd:963633;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
