--- a/SLNWEB.DAL/SLNWEB.DAL.csproj
+++ b/SLNWEB.DAL/SLNWEB.DAL.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping\CategoryMapping.cs" />
+    <Compile Include="Mapping\EmployeeMapping.cs" />
     <Compile Include="Mapping\OrderMapping.cs" />
     <Compile Include="Mapping\ProductMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
