--- a/SLNWEB.DAO/SLNWEB.DAO.csproj
+++ b/SLNWEB.DAO/SLNWEB.DAO.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VM\CategoryVM.cs" />
     <Compile Include="VM\EmployeeVM.cs" />
+    <Compile Include="VM\OrderVM.cs" />
     <Compile Include="VM\ProductVM.cs" />
     <Compile Include="VM\SatisVM.cs" />
     <Compile Include="VM\SatisYapVM.cs" />
