--- a/SLNWEB.DAL/SLNWEB.DAL.csproj
+++ b/SLNWEB.DAL/SLNWEB.DAL.csproj
@@ -53,8 +53,10 @@
     <Compile Include="Mapping\OrderMapping.cs" />
     <Compile Include="Mapping\ProductMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\EntityRepositoryDAL.cs" />
-    <Compile Include="Repository\IEntityRepositoryDAL.cs" />
+    <Compile Include="Repository\EntityRepository.cs" />
+    <Compile Include="Repository\IEntityRepository.cs" />
+    <Compile Include="Repository\IOrderDAL.cs" />
+    <Compile Include="Repository\OrderDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
