--- a/SLNWEB.DAL/SLNWEB.DAL.csproj
+++ b/SLNWEB.DAL/SLNWEB.DAL.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping\CustomerMapping.cs" />
     <Compile Include="Mapping\OrderMapping.cs" />
     <Compile Include="Mapping\ProductMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
