--- a/SLNWEB.DAL/App.config
+++ b/SLNWEB.DAL/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="NorthwindEntities" connectionString="data source=.;database=Northwind;uid=buraktoglu;pwd=963633;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
