--- a/SLNWEB.DAL/SLNWEB.DAL.csproj
+++ b/SLNWEB.DAL/SLNWEB.DAL.csproj
@@ -52,16 +52,20 @@
     <Compile Include="Mapping\EmployeeMapping.cs" />
     <Compile Include="Mapping\OrderMapping.cs" />
     <Compile Include="Mapping\ProductMapping.cs" />
+    <Compile Include="Mapping\ShipperMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CategoryDAL.cs" />
+    <Compile Include="Repository\EmployeeDAL.cs" />
     <Compile Include="Repository\EntityRepository.cs" />
     <Compile Include="Repository\ICategoryDAL.cs" />
     <Compile Include="Repository\IEmployeeDAL.cs" />
     <Compile Include="Repository\IEntityRepository.cs" />
     <Compile Include="Repository\IOrderDAL.cs" />
     <Compile Include="Repository\IProductDAL.cs" />
+    <Compile Include="Repository\IShipperDAL.cs" />
     <Compile Include="Repository\OrderDAL.cs" />
     <Compile Include="Repository\ProductDAL.cs" />
+    <Compile Include="Repository\ShipperDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
