--- a/SLNWEB.DAO/SLNWEB.DAO.csproj
+++ b/SLNWEB.DAO/SLNWEB.DAO.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VM\CategoryVM.cs" />
+    <Compile Include="VM\CustomerDemographicVM.cs" />
     <Compile Include="VM\CustomerVM.cs" />
     <Compile Include="VM\EmployeeVM.cs" />
     <Compile Include="VM\OrderVM.cs" />
