--- a/SLNWEB.UI/Web.config
+++ b/SLNWEB.UI/Web.config
@@ -50,7 +50,7 @@
   </system.codedom>
   <connectionStrings>
     <clear/>
-    <add name="NorthwindEntities" connectionString="data source=DESKTOP-47MR3VQ;database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="NorthwindEntities" connectionString="data source=.;database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
