--- a/SLNWEB.DAL/App.config
+++ b/SLNWEB.DAL/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="NorthwindEntities" connectionString="data source=.\SQLEXPRESS;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="NorthwindEntities" connectionString="data source=.;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
