--- a/SLNWEB.DAO/SLNWEB.DAO.csproj
+++ b/SLNWEB.DAO/SLNWEB.DAO.csproj
@@ -67,6 +67,7 @@
     <Compile Include="VM\CategoryVM.cs" />
     <Compile Include="VM\CustomerDemographicVM.cs" />
     <Compile Include="VM\CustomerOrderReportVM.cs" />
+    <Compile Include="VM\CustomerTopFiveReportVM.cs" />
     <Compile Include="VM\CustomerVM.cs" />
     <Compile Include="VM\EmployeeVM.cs" />
     <Compile Include="VM\OrderDetailVM.cs" />
