refactoring and validaiton added for orders

--- a/SLNWEB.Core/SLNWEB.Core.csproj
+++ b/SLNWEB.Core/SLNWEB.Core.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Entities\Supplier.cs" />
     <Compile Include="Entities\sysdiagram.cs" />
     <Compile Include="Entities\Territory.cs" />
+    <Compile Include="Validation\Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
